--- a/src/sample/fxml/UserWindow.fxml
+++ b/src/sample/fxml/UserWindow.fxml
@@ -1,51 +1,113 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane fx:id="AnchornTabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #D7E3F9;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.UserController">
    <children>
-      <TabPane layoutX="190.0" layoutY="62.0" prefHeight="534.0" prefWidth="552.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="80.0">
-        <tabs>
-          <Tab text="1">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </Tab>
-        </tabs>
-      </TabPane>
-      <AnchorPane fx:id="AnchornHeadLink" layoutX="205.0" prefHeight="75.0" prefWidth="465.0" AnchorPane.bottomAnchor="520.0" AnchorPane.leftAnchor="205.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="5.0" />
-      <ImageView fx:id="UserLogo" fitHeight="150.0" fitWidth="182.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="440.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="560.0" AnchorPane.topAnchor="10.0">
-         <image>
-            <Image url="@../image/UserLogo.png" />
-         </image>
-      </ImageView>
-      <AnchorPane fx:id="AnchornOrder" layoutX="14.0" layoutY="160.0" prefHeight="378.0" prefWidth="182.0">
+      <AnchorPane layoutX="302.0" layoutY="5.0" prefHeight="27.0" prefWidth="350.0">
          <children>
-            <Text layoutX="6.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Наименование Продукта" wrappingWidth="161.13671875" />
-            <Text layoutX="6.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Страна Производитель" wrappingWidth="161.13672405481339" />
-            <Text layoutX="7.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Наличие в магазине" wrappingWidth="161.13672405481339" />
-            <Text layoutX="9.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Количество" wrappingWidth="161.13672405481339" />
-            <TextField fx:id="Count" layoutX="6.0" layoutY="199.0" prefHeight="25.0" prefWidth="68.0" />
-            <TextField fx:id="TextFieldExistence" layoutX="6.0" layoutY="148.0" />
-            <TextField fx:id="TextFielldCountryProduct" layoutX="6.0" layoutY="94.0" />
-            <TextField fx:id="TextFieldNameProduct" layoutX="6.0" layoutY="41.0" />
-            <Button fx:id="BuyinBasket" layoutX="23.0" layoutY="263.0" mnemonicParsing="false" text="Добавить в Корзину" />
-            <Button fx:id="OnBasketButton" layoutX="24.0" layoutY="305.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="128.0" text="Перейти в корзину" />
+            <MenuBar layoutX="20.0" layoutY="1.0" prefHeight="27.0" prefWidth="310.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="19.0">
+               <menus>
+                  <Menu mnemonicParsing="false" text="Статистика" />
+                  <Menu mnemonicParsing="false" text="Адрес доставки">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Добавить адрес" />
+                     </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="История покупок">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Action 1" />
+                     </items>
+                  </Menu>
+               </menus>
+            </MenuBar>
          </children>
       </AnchorPane>
-      <Button fx:id="ExitButton" layoutX="59.0" layoutY="552.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="93.0" text="Отмена" />
-      <ImageView fx:id="BasketImage" fitHeight="60.0" fitWidth="64.0" layoutX="670.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
+      <ImageView fx:id="ImajeLeft" fitHeight="78.0" fitWidth="78.0" layoutX="108.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="556.0" AnchorPane.topAnchor="5.0">
          <image>
-            <Image url="@../image/Shopping%20Cart_100px.png" />
+            <Image url="@../image/User_96px.png" />
          </image>
       </ImageView>
+      <AnchorPane fx:id="AnchorTopLeft" prefHeight="78.0" prefWidth="159.0" style="-fx-border-color: #FFFFFF;" AnchorPane.leftAnchor="88.0" AnchorPane.topAnchor="5.0" />
+      <AnchorPane fx:id="AnchorTop" layoutX="255.0" layoutY="56.0" prefHeight="27.0" prefWidth="183.0" AnchorPane.leftAnchor="255.0" AnchorPane.rightAnchor="362.0" AnchorPane.topAnchor="56.0">
+         <children>
+            <ComboBox fx:id="Categories" layoutY="2.0" onAction="#SelectedItems" prefHeight="25.0" prefWidth="183.0" />
+         </children></AnchorPane>
+      <ImageView fx:id="ImajeRighte" fitHeight="78.0" fitWidth="78.0" layoutX="717.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+         <image>
+            <Image url="@../image/icons8-корзина-48.png" />
+         </image>
+      </ImageView>
+      <TabPane fx:id="PanePreviewProduct" layoutX="252.0" layoutY="88.0" prefHeight="501.0" prefWidth="541.0" style="-fx-border-color: #FFFFFF;" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="88.0">
+         <tabs>
+            <Tab fx:id="TabProduct" text="Вкладка Продуктов">
+               <content>
+                  <AnchorPane fx:id="AnchorTabProduct" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <GridPane fx:id="GridProduct" layoutX="7.0" layoutY="10.0" prefHeight="463.0" prefWidth="527.0" style="-fx-border-color: #FFFFFF;" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                        </GridPane>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+         </tabs>
+      </TabPane>
+      <AnchorPane fx:id="AnchorPaneInfo" layoutY="88.0" prefHeight="412.0" prefWidth="249.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="88.0">
+         <children>
+            <TabPane fx:id="TabPanInfo" prefHeight="412.0" prefWidth="249.0" style="-fx-border-color: #FFFFFF;" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="0.0">
+               <tabs>
+                  <Tab fx:id="TabInfo" text="Вкладка для Info">
+                     <content>
+                        <AnchorPane fx:id="AnchorInfo" minHeight="0.0" minWidth="0.0" prefHeight="376.0" prefWidth="137.0">
+                           <children>
+                              <Button layoutX="14.0" layoutY="339.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="221.0" style="-fx-background-radius: 10;" text="Добавить в Корзину" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
+                  <Tab fx:id="TabBasket" text="Вкладка Корзина">
+                     <content>
+                        <AnchorPane fx:id="AnchorBasket" minHeight="0.0" minWidth="0.0" prefHeight="376.0" prefWidth="137.0">
+                           <children>
+                              <ScrollPane fx:id="scrollPaneBasket" layoutX="14.0" layoutY="14.0" prefHeight="349.0" prefWidth="215.0" style="-fx-background-color: #FFFFFF;" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
+               </tabs>
+            </TabPane>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="AnchorButton" layoutX="14.0" layoutY="395.0" prefHeight="90.0" prefWidth="240.0" style="-fx-border-color: #FFFFFF;" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0">
+         <children>
+            <Button fx:id="okB" layoutX="148.0" layoutY="9.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="78.0" style="-fx-background-radius: 10;" text=" Ок" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="145.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+            <Button fx:id="cancelB" layoutX="148.0" layoutY="48.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="78.0" style="-fx-background-radius: 10;" text="Отмена" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="145.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="48.0" />
+            <Button fx:id="exitB" layoutX="4.0" layoutY="6.0" mnemonicParsing="false" prefHeight="78.0" prefWidth="28.0" style="-fx-background-radius: 10;" text="&lt;" />
+         </children>
+      </AnchorPane>
+      <Button fx:id="countButtonlable" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="717.0" layoutY="5.0" mnemonicParsing="false" prefHeight="13.0" prefWidth="37.0" style="-fx-background-color: transperent 10; -fx-border-radius: 10; -fx-border-color: #FFFFFF;" text="0" AnchorPane.rightAnchor="46.0" AnchorPane.topAnchor="5.0" />
    </children>
 </AnchorPane>
